--- a/giF0S_Project/Styles/Styles.scss
+++ b/giF0S_Project/Styles/Styles.scss
@@ -44,7 +44,7 @@ body {
 
     #buttonOne {
         display: block;
-        width: 144px;
+        width: 10.0140%;
         height: 36px;
         background-color: $backgroundcolorbtn;
         color: $outsidebordercolor;
@@ -60,14 +60,14 @@ body {
 
     #buttonTwo {
         display: block;
-        width: 131px;
+        width: 9.11%;
         height: 36px;
         background-color: $backgroundcolorbtn;
         color: $outsidebordercolor;
         font-size: 16px;
         font-weight: 400;
         font-family: $primaryfont;
-        margin-left: 16px;
+        margin-left: 1.1137%;
         margin-top: 44px;
         margin-bottom: 38px;
         border: $outsidebordercolor outset 1px;
@@ -76,10 +76,10 @@ body {
 
     #themes {
         display: flex;
-        width: 36px;
+        width: 2.504%;
         height: 36px;
         background-color: $backgroundcolorbtn;
-        margin-left: 0px;
+        margin-left: 0%;
         margin-top: 44px;
         margin-bottom: 38px;
         appearance: none;
@@ -94,7 +94,7 @@ body {
         margin-right: 83, 4492%;
         margin-left: 1.147%;
         color: $outsidebordercolor;
-        font-size: 16px;
+        font-size: 100%;
         font-weight: 400;
         font-family: $primaryfont;
     }
@@ -331,13 +331,21 @@ body {
     margin-top: 17px;
     display: flex;
     width: 100%;
+    img {
+        position: relative;
+        right: 30px;
+        bottom: 0px;
+        left: 0px;
+        height: 298px;
+        width: 100%;
+    }
 
     //THESE ARE THE STYLES TO THE ONLY GIF WITH BORDER  STYLE IN THE TRENDS SECTION
-    #trendsCharge1 {
+    #gifSuggest5 {
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
-        margin-right:0.3478%;
+        // justify-content: flex-end;
+        margin-right: 0.3478%;
         margin-left: 0%;
         height: 304px;
         width: 20.4461%;
@@ -345,50 +353,74 @@ body {
         box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
 
         img {
-            height: 296px;
-            width: 20.927%;
+            position: relative;
+            z-index: 1;
+            left: 3px;
+            bottom: 18px;
+            height: 100%;
+            width: 97.2778%;
             border: dotted $outsidebordercolor 1px;
         }
 
-        p {
+        div {
+            position: relative;
+            z-index: 4;
+            top: 284px;
             color: $fontcolorheader;
             font-size: 14px;
             font-family: $primaryfont;
             font-weight: 700;
-            width: 97.22277%;
+            width: 97.2778%;
             height: 24px;
             margin-left: 1.3943%;
             margin-bottom: 4px;
             background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
         }
-       
     }
-    #trendsCharge2{
-        margin-left:0.3478%;
+
+    #gifSuggest6 {
+        margin-left: 0.3478%;
     }
-    .secondaryTrendsCharge{
+
+    .secondaryTrendsCharge {
         display: flex;
-        background:$backgroundcolorsearchbox;
+        background: $backgroundcolorsearchbox;
         height: 298px;
         width: 20.0289%;
         margin-right: 0.5565%;
         margin-left: 0.5565%;
     }
-    .bigLeftTrendsCharge{
+
+    .bigLeftTrendsCharge {
         width: 41.1693%;
         height: 298px;
         margin-right: 0.5565%;
         margin-left: 0%;
-        background:$backgroundcolorsearchbox;
+        background: $backgroundcolorsearchbox;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
-    .bigRightTrendsCharge{
+
+    .bigRightTrendsCharge {
         width: 41.1693%;
         height: 298px;
         margin-right: 0.5565%;
         margin-left: 0.5565%;
-        background:$backgroundcolorsearchbox;
+        background: $backgroundcolorsearchbox;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
-    #trendsCharge8, #trendsCharge11, #trendsCharge18, #trendsCharge21{
+
+    #gifSuggest12,
+    #gifSuggest15,
+    #gifSuggest22,
+    #gifSuggest25 {
         margin-left: 0px;
     }
 }
