--- a/giF0S_Project/Theme2/Styles2/Styles2.css
+++ b/giF0S_Project/Theme2/Styles2/Styles2.css
@@ -46,7 +46,7 @@ body {
 
 #buttonzone #buttonOne {
   display: block;
-  width: 144px;
+  width: 10.0140%;
   height: 36px;
   background-color: #EE3EFE;
   color: #FFFFFF;
@@ -63,14 +63,14 @@ body {
 
 #buttonzone #buttonTwo {
   display: block;
-  width: 131px;
+  width: 9.11%;
   height: 36px;
   background-color: #EE3EFE;
   color: #FFFFFF;
   font-size: 16px;
   font-weight: 400;
   font-family: "Chakra Petch";
-  margin-left: 16px;
+  margin-left: 1.1137%;
   margin-top: 44px;
   margin-bottom: 38px;
   border: #110038 outset 1px;
@@ -82,7 +82,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 36px;
+  width: 2.504%;
   height: 36px;
   background-color: #EE3EFE;
   margin-left: 0px;
@@ -105,14 +105,14 @@ body {
   margin-right: 83, 4492%;
   margin-left: 1.147%;
   color: #FFFFFF;
-  font-size: 16px;
+  font-size: 100%;
   font-weight: 400;
   font-family: "Chakra Petch";
 }
 
 #searchbox {
   background-color: #B4B4B4;
-  width: 83.4492%;
+  width: 83.45%;
   height: 99px;
   margin-left: 6.9%;
   -webkit-box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #8F8F8F;
@@ -267,7 +267,7 @@ body {
 
 #suggestions #suggest {
   height: 32px;
-  width: 83.17%;
+  width: 83.45%;
   margin-left: 6.9%;
   margin-top: 76px;
   border: solid 1px #2E32FB;
@@ -315,56 +315,81 @@ body {
   margin-top: 19px;
 }
 
-#gifSuggest #first {
+#gifSuggest #gifSuggest1 {
   margin-left: 6.955%;
-  margin-right: 12px;
-  height: 280px;
-  width: 19.4720%;
 }
 
-#gifSuggest #first img {
-  height: 280px;
-  width: 100%;
+#gifSuggest #gifSuggest2, #gifSuggest #gifSuggest3, #gifSuggest #gifSuggest4 {
+  margin-left: 0.5565%;
 }
 
-#gifSuggest #second {
-  margin-left: 12px;
-  margin-right: 12px;
-  height: 280px;
-  width: 19.4720%;
+#gifSuggest .borderShadowGif {
+  margin-right: 0.5565%;
+  width: 20.0289%;
+  height: 313px;
+  background-color: #B4B4B4;
+  -webkit-box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #8F8F8F;
+          box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #8F8F8F;
 }
 
-#gifSuggest #second img {
+#gifSuggest .borderShadowGif img {
+  position: relative;
+  right: 30px;
+  bottom: 47px;
+  left: 4px;
   height: 280px;
-  width: 100%;
+  width: 97.22277%;
 }
 
-#gifSuggest #third {
-  margin-left: 12px;
-  margin-right: 12px;
-  height: 280px;
-  width: 19.4720%;
+#gifSuggest .hashtagGif {
+  color: #FFFFFF;
+  font-size: 14px;
+  font-family: "Chakra Petch";
+  font-weight: 700;
+  width: 97.22277%;
+  height: 24px;
+  margin-top: 4px;
+  margin-left: 1.3943%;
+  background: -webkit-gradient(linear, right top, left top, from(#EE3EFE), to(#2E32FB));
+  background: linear-gradient(270deg, #EE3EFE 0%, #2E32FB 100%);
 }
 
-#gifSuggest #third img {
-  height: 280px;
-  width: 100%;
+#gifSuggest .buttonCloseGif {
+  position: relative;
+  z-index: 4;
+  bottom: 43px;
+  left: 90.9775%;
+  width: 16px;
+  height: 14px;
+  margin-right: 1.786%;
+  background-image: url(../Images/button3.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-top: solid 1px #FFFFFF;
+  border-right: solid 1px #000000;
+  border-bottom: solid 1px #000000;
+  border-left: solid 1px #FFFFFF;
 }
 
-#gifSuggest #fourth {
-  margin-left: 12px;
-  margin-right: 12px;
-  height: 280px;
-  width: 19.4720%;
-}
-
-#gifSuggest #fourth img {
-  height: 280px;
-  width: 100%;
+#gifSuggest .seeMoreButton {
+  position: relative;
+  z-index: 5;
+  font-size: 14px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
+  color: #FFFFFF;
+  top: 223px;
+  right: 8px;
+  width: 81px;
+  height: 34px;
+  background-color: #4180F6;
+  border: solid 1px #4C2F99;
+  -webkit-box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #284F99;
+          box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #284F99;
 }
 
 #trendsSection #trends {
-  width: 83.44%;
+  width: 83.45%;
   height: 32px;
   margin-top: 68px;
   margin-left: 6.9541%;
@@ -407,26 +432,106 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.trendsCharge .trendsFirstCharge {
-  margin-right: 12px;
-  margin-left: 0%;
-  height: 280px;
-  width: 20.927%;
+  width: 100%;
 }
 
 .trendsCharge img {
-  margin-left: 12px;
-  margin-right: 12px;
-  height: 280px;
-  width: 20.927%;
+  position: relative;
+  right: 30px;
+  bottom: 0px;
+  left: 0px;
+  height: 298px;
+  width: 100%;
 }
 
-.trendsCharge div img {
-  margin-left: 12px;
-  margin-right: 12px;
-  height: 280px;
-  width: 20.927%;
+.trendsCharge #gifSuggest5 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-right: 0.3478%;
+  margin-left: 0%;
+  height: 304px;
+  width: 20.4461%;
+  background-color: #B4B4B4;
+  -webkit-box-shadow: inset -2px -2px 0 0 #8F8F8F, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #8F8F8F, inset 2px 2px 0 0 #FFFFFF;
+}
+
+.trendsCharge #gifSuggest5 img {
+  position: relative;
+  z-index: 1;
+  left: 3px;
+  bottom: 18px;
+  height: 100%;
+  width: 97.2778%;
+  border: dotted #110038 1px;
+}
+
+.trendsCharge #gifSuggest5 div {
+  position: relative;
+  z-index: 4;
+  top: 284px;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-family: "Chakra Petch";
+  font-weight: 700;
+  width: 97.2778%;
+  height: 24px;
+  margin-left: 1.3943%;
+  margin-bottom: 4px;
+  background: -webkit-gradient(linear, right top, left top, from(#EE3EFE), to(#2E32FB));
+  background: linear-gradient(270deg, #EE3EFE 0%, #2E32FB 100%);
+}
+
+.trendsCharge #gifSuggest6 {
+  margin-left: 0.3478%;
+}
+
+.trendsCharge .secondaryTrendsCharge {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #B4B4B4;
+  height: 298px;
+  width: 20.0289%;
+  margin-right: 0.5565%;
+  margin-left: 0.5565%;
+}
+
+.trendsCharge .bigLeftTrendsCharge {
+  width: 41.1693%;
+  height: 298px;
+  margin-right: 0.5565%;
+  margin-left: 0%;
+  background: #B4B4B4;
+}
+
+.trendsCharge .bigLeftTrendsCharge img {
+  width: 100%;
+  height: 100%;
+}
+
+.trendsCharge .bigRightTrendsCharge {
+  width: 41.1693%;
+  height: 298px;
+  margin-right: 0.5565%;
+  margin-left: 0.5565%;
+  background: #B4B4B4;
+}
+
+.trendsCharge .bigRightTrendsCharge img {
+  width: 100%;
+  height: 100%;
+}
+
+.trendsCharge #gifSuggest12,
+.trendsCharge #gifSuggest15,
+.trendsCharge #gifSuggest22,
+.trendsCharge #gifSuggest25 {
+  margin-left: 0px;
 }
 /*# sourceMappingURL=Styles2.css.map */
